syntax = "proto3";

import "com/crisiscleanup/core/data/app_end_use.proto";

option java_package = "com.crisiscleanup.core.datastore";
option java_multiple_files = true;

message AppMetrics {
  AppEndUseProto earlybirdBuildEnd = 1;

  int64 appOpenSeconds = 2;
  int64 appOpenVersion = 3;

  int64 productionApiSwitchVersion = 4;
}
